# rail-dispatch

./: .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  TODO.md
resources/: level.toml
resources/font/: info.txt  read me-ae94.txt
src/: assets.rs  audio.rs  block.rs  board_baker.rs  clock.rs  common.rs  consts.rs  debug_overlay.rs  display.rs  display_board.rs  dropdown_menu.rs  engine.rs  event.rs  game_state.rs  lamp.rs  level.rs  lib.rs  main.rs  panel.rs  speed_table.rs  time_controls.rs  train.rs
src/display/: display_board.rs  lamp.rs  mod.rs  signal.rs  speed_table.rs  train.rs
src/editor/: editor.rs  handles.rs  main.rs  save.rs  sidebar.rs  text_input.rs
src/simulation/: block.rs  engine.rs  messages.rs  mod.rs  signal.rs  sparse_vec.rs  spawner.rs  station.rs  switch.rs  train.rs  updates.rs
