[package]
name = "rail-dispatch"
version = "0.1.0"
authors = ["Aleksandr Andreev <dandi.vlg@gmail.com>"]
edition = "2024"

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
    # basic support
    "bevy_asset",
    "bevy_audio",
    "bevy_camera",
    "bevy_color",
    "bevy_image",
    "bevy_input_focus",
    "bevy_log",
    "bevy_picking",
    "bevy_state",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "reflect_auto_register",
    "png",
    # render
    "bevy_core_pipeline",
    "bevy_render",
    "wayland",
    "webgl2",
    "x11",
    # ui
    "bevy_text",
    "bevy_ui",
    "ui_picking",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    # rethink later
    "default_font",
    # dev stuff
    "debug",
    "bevy_dev_tools",
]

[dependencies]
itertools = "0.14.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
toml = "0.9.8"
event-listener = "5.4.1"
futures-lite = "2.6.1"
thiserror = "2.0.17"
arrayvec = "0.7.6"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
